[project]
name = "us-healthcare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daphne Hansell", email = "daphne@policyengine.org" }
]
requires-python = ">=3.11"
dependencies = [
    "furo>=2024.8.6",
    "jupyter-book>=1.0.4.post1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "snowballstemmer>=2,<3",
]

[project.scripts]
us-healthcare = "us_healthcare:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
